# technicausbbr-tray

./: CMakeLists.txt  README  README.md  install.sh  technica-br-converter.rules  uninstall.sh
cmake/: Findlibudev.cmake
resource/: CMakeLists.txt
resource/xdg/: technicabr.desktop.in
src/: Application.cpp  Application.h  BRDongle.cpp  BRDongle.h  CMakeLists.txt  HotplugHandler.cpp  HotplugHandler.h  ResourcePath.cpp  ResourcePath.h  build_config.h.in  main.cpp
