cmake_minimum_required(VERSION 3.1)

set(DESKTOP_FILE xdg/technicabr.desktop)
set(ICONS_FOLDER icons)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/${ICONS_FOLDER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

configure_file(${DESKTOP_FILE}.in ${DESKTOP_FILE} @ONLY)

if (DESTDIR)
	get_filename_component(ABSOLUTE_DESTDIR ${DESTDIR} ABSOLUTE)
endif (DESTDIR)

set(CMAKE_INSTALL_PREFIX_ORIG ${CMAKE_INSTALL_PREFIX})
set(CMAKE_INSTALL_PREFIX "" FORCE)

install(DIRECTORY ${ICONS_FOLDER}/
	DESTINATION "${XDG_ICONS_PATH}"
	DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
	FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
	)
	
# Install the .desktop file to autostart and to the menu
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${DESKTOP_FILE}
	DESTINATION "${XDG_AUTOSTART_PATH}"
	PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
	)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${DESKTOP_FILE}
	DESTINATION "${XDG_APPLICATIONS_PATH}"
	PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
	)
	
set(CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX_ORIG} FORCE)